unpackaged/main/default/objects/genesis__Document_Category__c/genesis__Document_Category__c.object-meta.xml
<CustomObject>
    <label>Document Category</label>
    <nameField>
        <displayFormat>DC-{00000000}</displayFormat>
        <label>Document Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>