unpackaged/main/default/objects/genesis__Document_Category__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <description>Mapping Application Status to the Document Category</description>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Status</valueSetName>
    </valueSet>
</CustomField>