unpackaged/main/default/objects/genesis__Document_Category__c/fields/Code_FF__c.field-meta.xml
<CustomField>
    <fullName>Code_FF__c</fullName>
    <label>Code_FF</label>
    <length>100</length>
    <type>Text</type>
</CustomField>