unpackaged/main/default/objects/genesis__Document_Category__c/fields/genesis__Applicable_For__c.field-meta.xml
<CustomField>
    <fullName>genesis__Applicable_For__c</fullName>
    <label>Applicable For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CONTRACT</fullName>
            </value>
            <value>
                <fullName>PARTY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>