unpackaged/main/default/objects/genesis__Document_Category__c/fields/genesis__Applicable_For_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Applicable_For_Type__c</fullName>
    <label>Responsible Party Type (Deprecated)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APPRAISER</fullName>
            </value>
            <value>
                <fullName>BORROWER</fullName>
            </value>
            <value>
                <fullName>CREDIT OFFICER</fullName>
            </value>
            <value>
                <fullName>ENTITY</fullName>
            </value>
            <value>
                <fullName>GUARANTOR</fullName>
            </value>
            <value>
                <fullName>LOAN OFFICER</fullName>
            </value>
            <value>
                <fullName>SURVEYOR</fullName>
            </value>
            <value>
                <fullName>PROCESSOR</fullName>
            </value>
            <value>
                <fullName>CLOSER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>