unpackaged/main/default/objects/genesis__Document_Category__c/fields/genesis__Category_Name__c.field-meta.xml
<CustomField>
    <fullName>genesis__Category_Name__c</fullName>
    <label>Category Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>