unpackaged/main/default/objects/genesis__Document_Category__c/fields/genesis__Create_Tasks__c.field-meta.xml
<CustomField>
    <fullName>genesis__Create_Tasks__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Task</label>
    <type>Checkbox</type>
</CustomField>