unpackaged/main/default/objects/genesis__Document_Category__c/fields/genesis__Description__c.field-meta.xml
<CustomField>
    <fullName>genesis__Description__c</fullName>
    <label>Description</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>