unpackaged/main/default/objects/genesis__Document_Category__c/fields/genesis__Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>genesis__Generation_Status__c</fullName>
    <label>Generation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PULL CREDIT</fullName>
            </value>
            <value>
                <fullName>agent_verified</fullName>
            </value>
            <value>
                <fullName>offer_shown</fullName>
            </value>
            <value>
                <fullName>Self Employed Documents</fullName>
            </value>
            <value>
                <fullName>Default Documents</fullName>
            </value>
            <value>
                <fullName>kba_success</fullName>
            </value>
            <value>
                <fullName>TRUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>