unpackaged/main/default/objects/genesis__Document_Category__c/fields/genesis__Parent_Document_Category__c.field-meta.xml
<CustomField>
    <fullName>genesis__Parent_Document_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Child document category to define folder structure in documents.</description>
    <label>Parent Document Category</label>
    <referenceTo>genesis__Document_Category__c</referenceTo>
    <relationshipLabel>Document Categories</relationshipLabel>
    <relationshipName>Document_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>