unpackaged/main/default/objects/genesis__Document_Category__c/fields/genesis__Required__c.field-meta.xml
<CustomField>
    <fullName>genesis__Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>