unpackaged/main/default/objects/genesis__Document_Category__c/fields/genesis__Responsible_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Responsible_Party_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Party Type</label>
    <referenceTo>clcommon__Party_Type__c</referenceTo>
    <relationshipLabel>Document Categories</relationshipLabel>
    <relationshipName>Document_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>