unpackaged/main/default/objects/genesis__Document_Category__c/fields/genesis__Review_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>genesis__Review_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default reviewer.</description>
    <inlineHelpText>Default reviewer.</inlineHelpText>
    <label>Review Assigned To (Deprecated)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>