unpackaged/main/default/objects/genesis__Document_Category__c/fields/genesis__Review_Assigned_To_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Review_Assigned_To_Party_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Assigned To (Party Type)</label>
    <referenceTo>clcommon__Party_Type__c</referenceTo>
    <relationshipLabel>Document Categories (Review Assigned To(Party Type))</relationshipLabel>
    <relationshipName>Document_Categories1</relationshipName>
    <type>Lookup</type>
</CustomField>