unpackaged/main/default/objects/genesis__Document_Category__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>genesis__Category_Name__c</columns>
    <columns>genesis__Generation_Status__c</columns>
    <columns>genesis__Required__c</columns>
    <columns>genesis__Parent_Document_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>