unpackaged/main/default/objects/genesis__Document_Category__c/listViews/genesis__All.listView-meta.xml
<ListView>
    <fullName>genesis__All</fullName>
    <columns>NAME</columns>
    <columns>genesis__Category_Name__c</columns>
    <columns>genesis__Applicable_For__c</columns>
    <columns>genesis__Description__c</columns>
    <columns>genesis__Responsible_Party_Type__c</columns>
    <columns>genesis__Task_Setup__c</columns>
    <columns>genesis__Parent_Document_Category__c</columns>
    <columns>genesis__Generation_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>