unpackaged/main/default/objects/genesis__Document_Category__c/listViews/Mark_Docs.listView-meta.xml
<ListView>
    <fullName>Mark_Docs</fullName>
    <columns>NAME</columns>
    <columns>genesis__Category_Name__c</columns>
    <columns>Code_FF__c</columns>
    <columns>genesis__Description__c</columns>
    <columns>genesis__Parent_Document_Category__c</columns>
    <columns>genesis__Required__c</columns>
    <columns>genesis__Responsible_Party_Type__c</columns>
    <columns>genesis__Generation_Status__c</columns>
    <columns>Application_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mark-Docs</label>
</ListView>